k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-fastapi-medium
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quick-fastapi-medium
  template:
    metadata:
      labels:
        app: quick-fastapi-medium
    spec:
      containers:
        - name: api
          image: quick-fastapi-medium:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
