k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-fastapi-medium-postgres
spec:
  selector:
    app: quick-fastapi-medium-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
