k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-fastapi-medium-redis
spec:
  selector:
    app: quick-fastapi-medium-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
