k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-fastapi-medium
spec:
  selector:
    app: quick-fastapi-medium
  ports:
    - name: http
      port: 80
      targetPort: 8000
